# line-of-sight

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  biome.jsonc  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.cursor/rules/: ship-after-change.mdc
.github/workflows/: ci.yml
core/: detect.ts  dice.ts  geometry.ts  los.test.ts  los.ts  pathfinding.test.ts  pathfinding.ts  rules.ts  visibility.ts
crates/los-core/: Cargo.toml
crates/los-core/src/: lib.rs
docs/: ARCHITECTURE.md  BACKLOG.md  COMPANION-PLAY.md  CV_REVIEW_PIPELINE.md  MULTIPLAYER.md  NN_WALL_DETECTION.md  PATTERNS.md  README.md  SOLO-COOP.md  SOLO.md  SYNTHETIC_MAPS.md  WALL_DOOR_DETECTION.md  WALL_DOOR_SPIKE_FINDINGS.md  architecture.md  los-core.md  patterns.md  sidecar-format.md  ui.md
docs/architecture/: los-core.md  overview.md
docs/diagrams/: README.md  analysis-pipeline.dot  multiplayer-architecture.dot  solo-game-loop.dot  system-overview.dot  visibility-and-fog.dot
docs/guides/: ui.md
scripts/: _diagrams.mjs  benchmark-all-geomorphs.mjs  benchmark-detection.mjs  check-diagrams.mjs  cv-review-pilot.mjs  e2e-multiplayer.mjs  e2e-smoke.mjs  gen-pwa-icons.mjs  live-smoke-test.mjs  render-diagrams.mjs  spike-ab-detection.mjs  spike-corpus.mjs  spike-shots.mjs  stamp-sw.mjs  visual-check-detection.mjs
src/: cf.ts  game-table.test.ts  game-table.ts  protocol.test.ts  protocol.ts  sentry.ts  solo-room.ts  worker.ts
web/: board.html  controller.html  edit.html  generate.html  index.html  play.html  solo-board.html  solo.html  spike.html
(+93 files in other folders)
